# android-opencl-test

./: README.md
WorkingDir/Backup/Android Studio 2/: step.cl
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/miche/androidopencltest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/CL/: cl_ext.h  cl_version.h
app/src/main/java/com/example/miche/androidopencltest/: MainActivity.java
app/src/test/java/com/example/miche/androidopencltest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
